# bytemate

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  diesel.toml
src/: main.rs
src/commands/: mod.rs
src/commands/configuration/: config.rs
src/commands/configuration/config/: core.rs  moderation.rs
src/commands/moderation/: ban.rs  cases.rs  channel.rs  clear.rs  kick.rs  mod.rs  mute.rs  unmute.rs  warn.rs
src/commands/utils/: help.rs
src/database/: manager.rs  models.rs  schema.rs  upsert.rs
src/events/: cache_ready.rs  guild_create.rs  message.rs  mod.rs  ready.rs
src/localization/: manager.rs
src/modules/moderation/: logs.rs  notifications.rs
src/util/: color.rs  interaction.rs  time.rs  timestamp.rs  util.rs
website/: bun.lockb  package.json
website/app/: layout.tsx  page.tsx
website/components/home/: TempHeader.module.css  TempHeader.tsx
